crates/sui-prover/tests/snapshots/pure_functions/pure_early_return.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/pure_functions/pure_early_return.fail.move:24:5
   │
24 │     ensures(result == false);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/pure_functions/pure_early_return.fail.move:23: test_is_positive_wrong
